--- a/package.json
+++ b/package.json
@@ -3,15 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@tensorflow/tfjs": "^3.13.0",
+    "@tensorflow-models/coco-ssd": "^2.2.2",
+    "@tensorflow-models/qna": "^1.0.0",
+    "@tensorflow/tfjs": "^3.14.0",
+    "@tensorflow/tfjs-backend-cpu": "^3.14.0",
+    "@tensorflow/tfjs-backend-webgl": "^3.14.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-p5": "^1.3.27",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
+    "react-webcam": "^6.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
