--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@tensorflow-models/coco-ssd": "^2.2.2",
     "@tensorflow-models/qna": "^1.0.0",
+    "@tensorflow-models/toxicity": "^1.2.2",
     "@tensorflow/tfjs": "^3.14.0",
     "@tensorflow/tfjs-backend-cpu": "^3.14.0",
     "@tensorflow/tfjs-backend-webgl": "^3.14.0",
