--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
     "gh-pages": "^3.2.3",
+    "plotly.js": "^2.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-p5": "^1.3.27",
+    "react-plotly.js": "^2.5.1",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-webcam": "^6.0.1",
