--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "brain.js": "^2.0.0-beta.5",
     "gh-pages": "^3.2.3",
     "plotly.js": "^2.10.1",
     "react": "^17.0.2",
